[project]
name = "langchain-project"
version = "0.1.0"
description = "Learning LangChain with Python."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "google-search-results>=2.4.2",
    "langchain-ollama>=1.0.0",
    "google-cloud-aiplatform>=1.121.0",
    "langchain-google-vertexai>=3.0.0",
    "langchain-google-genai>=3.0.0",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.7",
   " huggingface-hub>=0.35.3"

]